--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8703e1bd",
+   "id": "3ab94f8b",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87959f2c",
+   "id": "391e9025",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58613236",
+   "id": "448ada24",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50cce2c",
+   "id": "834c3869",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b4cca1",
+   "id": "e2dd0725",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a110b3a3",
+   "id": "054dd43e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9036ef4e",
+   "id": "70cd37f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:22.613816Z",
-     "iopub.status.busy": "2025-01-27T16:16:22.613405Z",
-     "iopub.status.idle": "2025-01-27T16:16:26.970005Z",
-     "shell.execute_reply": "2025-01-27T16:16:26.969436Z"
+     "iopub.execute_input": "2025-01-27T16:48:25.459098Z",
+     "iopub.status.busy": "2025-01-27T16:48:25.458648Z",
+     "iopub.status.idle": "2025-01-27T16:48:30.272281Z",
+     "shell.execute_reply": "2025-01-27T16:48:30.271686Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21ce928",
+   "id": "287e887f",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c019e70",
+   "id": "e24cd27d",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc1661a",
+   "id": "e5ccf68b",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52442d46",
+   "id": "bfd7e579",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c35ab0",
+   "id": "970ad5cc",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d267f03b",
+   "id": "eee382fb",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126d9775",
+   "id": "094d5d5a",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb9808e",
+   "id": "8217fe0f",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "938ee997",
+   "id": "bd7c78bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:26.972185Z",
-     "iopub.status.busy": "2025-01-27T16:16:26.971889Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.073496Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.072861Z"
+     "iopub.execute_input": "2025-01-27T16:48:30.274847Z",
+     "iopub.status.busy": "2025-01-27T16:48:30.274378Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.428648Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.428096Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d2e0cb",
+   "id": "ac803bc4",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "857d4045",
+   "id": "b54b5b70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.075640Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.075243Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.078651Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.077947Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.430756Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.430385Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.434167Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.433584Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad01f4f",
+   "id": "4182764d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217fa7d0",
+   "id": "ad9285b7",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f46b6a2",
+   "id": "8d0d3958",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c316052",
+   "id": "b9fe6971",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65527dc9",
+   "id": "268da140",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.080634Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.080323Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.127445Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.126841Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.436116Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.435767Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.484017Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.483473Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2993efd",
+   "id": "430ec1f2",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9108eb1",
+   "id": "52d231b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.129269Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.129079Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.203530Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.202979Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.486093Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.485610Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.560034Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.559491Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d17eac",
+   "id": "a9739b75",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3298a1a",
+   "id": "bdda679f",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5371ebb7",
+   "id": "eba20921",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.205760Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.205275Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.238329Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.237727Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.562006Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.561678Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.594371Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.593813Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27982d5",
+   "id": "ca8b873c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4d2afaf",
+   "id": "63888a86",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2209ef",
+   "id": "a6ca3166",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a96685e",
+   "id": "cbcd294c",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512984a2",
+   "id": "e2d373c0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9e93f002",
+   "id": "cb2326b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.240608Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.240231Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.245314Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.244688Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.596380Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.596164Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.600449Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.599803Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ce27ef",
+   "id": "c03be62b",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6a46815",
+   "id": "26987795",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.247154Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.246796Z",
-     "iopub.status.idle": "2025-01-27T16:16:29.249869Z",
-     "shell.execute_reply": "2025-01-27T16:16:29.249376Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.602283Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.601994Z",
+     "iopub.status.idle": "2025-01-27T16:48:32.605213Z",
+     "shell.execute_reply": "2025-01-27T16:48:32.604649Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e592713d",
+   "id": "2dc6590a",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da474739",
+   "id": "e78745c2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:29.251668Z",
-     "iopub.status.busy": "2025-01-27T16:16:29.251296Z",
-     "iopub.status.idle": "2025-01-27T16:16:31.881830Z",
-     "shell.execute_reply": "2025-01-27T16:16:31.881188Z"
+     "iopub.execute_input": "2025-01-27T16:48:32.607089Z",
+     "iopub.status.busy": "2025-01-27T16:48:32.606779Z",
+     "iopub.status.idle": "2025-01-27T16:48:35.314934Z",
+     "shell.execute_reply": "2025-01-27T16:48:35.314336Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407ff243",
+   "id": "3a27710d",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28980cfb",
+   "id": "3cfb51cd",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff0617a4",
+   "id": "05c9a835",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787c6c95",
+   "id": "7ad3fcc2",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2b51391c",
+   "id": "8c277718",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:31.884045Z",
-     "iopub.status.busy": "2025-01-27T16:16:31.883694Z",
-     "iopub.status.idle": "2025-01-27T16:16:31.887474Z",
-     "shell.execute_reply": "2025-01-27T16:16:31.886829Z"
+     "iopub.execute_input": "2025-01-27T16:48:35.316847Z",
+     "iopub.status.busy": "2025-01-27T16:48:35.316656Z",
+     "iopub.status.idle": "2025-01-27T16:48:35.320258Z",
+     "shell.execute_reply": "2025-01-27T16:48:35.319651Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f320c9a76a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fed3db5de40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "731a47eb",
+   "id": "c534300b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad5eb1ce",
+   "id": "12f5926d",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a925995",
+   "id": "cc044fe8",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c7c1ed",
+   "id": "40868284",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ab756c32",
+   "id": "fed49728",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:31.889344Z",
-     "iopub.status.busy": "2025-01-27T16:16:31.889163Z",
-     "iopub.status.idle": "2025-01-27T16:16:31.891984Z",
-     "shell.execute_reply": "2025-01-27T16:16:31.891494Z"
+     "iopub.execute_input": "2025-01-27T16:48:35.322136Z",
+     "iopub.status.busy": "2025-01-27T16:48:35.321798Z",
+     "iopub.status.idle": "2025-01-27T16:48:35.324809Z",
+     "shell.execute_reply": "2025-01-27T16:48:35.324335Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7cfdb43e",
+   "id": "fb380997",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:16:31.893554Z",
-     "iopub.status.busy": "2025-01-27T16:16:31.893378Z",
-     "iopub.status.idle": "2025-01-27T16:16:32.949484Z",
-     "shell.execute_reply": "2025-01-27T16:16:32.948919Z"
+     "iopub.execute_input": "2025-01-27T16:48:35.326566Z",
+     "iopub.status.busy": "2025-01-27T16:48:35.326220Z",
+     "iopub.status.idle": "2025-01-27T16:48:36.392131Z",
+     "shell.execute_reply": "2025-01-27T16:48:36.391502Z"
     }
    },
    "outputs": [
